Upgraded react/bootstrap/fontawesome with grpc/kotlin web app