@@ -1,7 +1,7 @@
 package dmo.fs.spa.db.reactive;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.util.Optional;
 
@@ -14,7 +14,6 @@ import dmo.fs.spa.utils.SpaUtil;
 import dmo.fs.utils.ColorUtilConstants;
 import dmo.fs.utils.DodexUtil;
 import io.vertx.core.Future;
-import io.vertx.core.Promise;
 import io.vertx.core.Vertx;
 import io.vertx.core.http.HttpMethod;
 import io.vertx.core.http.HttpServerResponse;
@@ -35,9 +34,10 @@ public class SpaRoutes {
     protected SessionStore sessionStore;
     protected static final SpaDatabaseReactive spaDatabaseReactive = SpaDbConfiguration.getSpaDb();
 
-    public SpaRoutes(Vertx vertx, Router router, Promise<Router> routesPromise) throws InterruptedException, SQLException {
+    public SpaRoutes(Vertx vertx, io.vertx.mutiny.ext.web.Router router, io.vertx.mutiny.core.Promise<io.vertx.mutiny.ext.web.Router> routesPromise)
+            throws InterruptedException, SQLException {
         this.vertx = vertx;
-        this.router = router;
+        this.router = router.getDelegate();
         sessionStore = LocalSessionStore.create(vertx);
         spaDatabaseReactive.databaseSetup().onSuccess(none -> {
             setGetLoginRoute();
@@ -55,63 +55,58 @@ public class SpaRoutes {
         if ("dev".equals(DodexUtil.getEnv())) {
             route.handler(CorsHandler.create("*").allowedMethod(HttpMethod.POST));
         }
-        route.handler(routingContext -> {
-            routingContext.request().bodyHandler(bodyHandler -> {
-                SpaApplication spaApplication = null;
-                try {
-                    spaApplication = new SpaApplication();
-                    spaApplication.setDatabase(spaDatabaseReactive);
-                } catch (InterruptedException e1) {
-                    e1.printStackTrace();
-                }
-                String body = bodyHandler.toString("UTF-8");
-                String bodyDecoded = null;
+        route.handler(routingContext -> routingContext.request().bodyHandler(bodyHandler -> {
+            SpaApplication spaApplication = null;
+            try {
+                spaApplication = new SpaApplication();
+                spaApplication.setDatabase(spaDatabaseReactive);
+            } catch (InterruptedException e1) {
+                e1.printStackTrace();
+            }
+            String body = bodyHandler.toString("UTF-8");
+            String bodyDecoded;
 
+            bodyDecoded = URLDecoder.decode(body, StandardCharsets.UTF_8);
+
+            Session session = routingContext.session();
+
+            routingContext.put("name", "getlogin");
+            if (session.get("login") != null) {
+                session.remove("login");
+            }
+
+            HttpServerResponse response = routingContext.response();
+
+            final Optional<String> queryData = Optional.ofNullable(bodyDecoded);
+
+            if (queryData.isPresent()) {
+                response.putHeader("content-type", "application/json");
+
+                Future<SpaLogin> future = null;
                 try {
-                    bodyDecoded = URLDecoder.decode(body, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
+                    future = spaApplication.getLogin(bodyDecoded);
+                } catch (InterruptedException | SQLException e) {
                     e.printStackTrace();
                 }
 
-                Session session = routingContext.session();
-
-                routingContext.put("name", "getlogin");
-                if (session.get("login") != null) {
-                    session.remove("login");
-                }
-
-                HttpServerResponse response = routingContext.response();
-
-                final Optional<String> queryData = Optional.ofNullable(bodyDecoded);
-
-                if (queryData.isPresent()) {
-                    response.putHeader("content-type", "application/json");
-
-                    Future<SpaLogin> future = null;
-                    try {
-                        future = spaApplication.getLogin(bodyDecoded);
-                    } catch (InterruptedException | SQLException e) {
-                        e.printStackTrace();
+                assert future != null;
+                future.onSuccess(result -> {
+                    if (result.getId() == null) {
+                        result.setId(0L);
                     }
+                    session.put("login", new JsonObject(result.getMap()));
+                    response.end(new JsonObject(result.getMap()).encode());
+                });
 
-                    future.onSuccess(result -> {
-                        if (result.getId() == null) {
-                            result.setId(0l);
-                        }
-                        session.put("login", new JsonObject(result.getMap()));
-                        response.end(new JsonObject(result.getMap()).encode());
-                    });
-
-                    future.onFailure(failed -> {
-                        logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT, "Add Login Failed: ",
-                                failed.getMessage(), ColorUtilConstants.RESET));
-                        response.end(FAILURE);
-                    });
-                } else {
-                    routingContext.response().setStatusCode(500).end("Somethings wrong - Post");
-                }
-            });
-        });
+                future.onFailure(failed -> {
+                    logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT, "Add Login Failed: ",
+                            failed.getMessage(), ColorUtilConstants.RESET));
+                    response.end(FAILURE);
+                });
+            } else {
+                routingContext.response().setStatusCode(500).end("Somethings wrong - Post");
+            }
+        }));
     }
 
     public void setPutLoginRoute() {
@@ -122,92 +117,87 @@ public class SpaRoutes {
             route.handler(CorsHandler.create("*").allowedMethod(HttpMethod.PUT));
         }
 
-        route.handler(routingContext -> {
-            routingContext.request().bodyHandler(bodyHandler -> {
-                SpaApplication spaApplication = null;
-                try {
-                    spaApplication = new SpaApplication();
-                    spaApplication.setDatabase(spaDatabaseReactive);
-                } catch (InterruptedException e1) {
-                    e1.printStackTrace();
-                }
-                String body = bodyHandler.toString("UTF-8");
-                String bodyDecoded = null;
+        route.handler(routingContext -> routingContext.request().bodyHandler(bodyHandler -> {
+            SpaApplication spaApplication = null;
+            try {
+                spaApplication = new SpaApplication();
+                spaApplication.setDatabase(spaDatabaseReactive);
+            } catch (InterruptedException e1) {
+                e1.printStackTrace();
+            }
+            String body = bodyHandler.toString("UTF-8");
+            String bodyDecoded;
+
+            bodyDecoded = URLDecoder.decode(body, StandardCharsets.UTF_8);
+
+            Session session = routingContext.session();
+
+            routingContext.put("name", "putlogin");
+            if (session.get("login") != null) {
+                session.remove("login");
+            }
+
+            HttpServerResponse response = routingContext.response();
+
+            final Optional<String> queryData = Optional.ofNullable(bodyDecoded);
+
+            if (queryData.isPresent()) {
+                response.putHeader("content-type", "application/json");
 
                 try {
-                    bodyDecoded = URLDecoder.decode(body, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    e.printStackTrace();
-                }
+                    SpaLogin defaultSpaLogin = SpaUtil.createSpaLogin();
+                    SpaLogin spaLogin = SpaUtil.parseBody(queryData.get(), defaultSpaLogin);
 
-                Session session = routingContext.session();
+                    JsonObject jsonObject = new JsonObject(spaLogin.getMap());
+                    Future<SpaLogin> futureLogin = spaApplication.getLogin(jsonObject.encode());
 
-                routingContext.put("name", "putlogin");
-                if (session.get("login") != null) {
-                    session.remove("login");
-                }
+                    futureLogin.onSuccess(result -> {
 
-                HttpServerResponse response = routingContext.response();
-
-                final Optional<String> queryData = Optional.ofNullable(bodyDecoded);
-
-                if (queryData.isPresent()) {
-                    response.putHeader("content-type", "application/json");
-
-                    try {
-                        SpaLogin spaLogin = SpaUtil.createSpaLogin();
-                        spaLogin = SpaUtil.parseBody(queryData.get(), spaLogin);
-
-                        JsonObject jsonObject = new JsonObject(spaLogin.getMap());
-                        Future<SpaLogin> futureLogin = spaApplication.getLogin(jsonObject.encode());
-
-                        futureLogin.onSuccess(result -> {
-
-                            if ("0".equals(result.getStatus())) {
-                                result.setStatus("-2");
-                                response.end(new JsonObject(result.getMap()).encode());
-                            } else {
-                                Future<SpaLogin> future = null;
-                                try {
-                                    SpaApplication spaApplicationAdd = new SpaApplication();
-                                    spaApplicationAdd.setDatabase(spaDatabaseReactive);
-                                    future = spaApplicationAdd.addLogin(queryData.get());
-                                } catch (InterruptedException | SQLException e) {
-                                    e.printStackTrace();
-                                }
-
-                                future.onSuccess(result2 -> {
-                                    session.put("login", new JsonObject(result2.getMap()));
-                                    response.end(new JsonObject(result2.getMap()).encode());
-                                });
-
-                                future.onFailure(failed -> {
-                                    logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT,
-                                            "Add Login failed...: ", failed.getMessage(), ColorUtilConstants.RESET));
-                                    response.end(FAILURE);
-                                });
+                        if ("0".equals(result.getStatus())) {
+                            result.setStatus("-2");
+                            response.end(new JsonObject(result.getMap()).encode());
+                        } else {
+                            Future<SpaLogin> future = null;
+                            try {
+                                SpaApplication spaApplicationAdd = new SpaApplication();
+                                spaApplicationAdd.setDatabase(spaDatabaseReactive);
+                                future = spaApplicationAdd.addLogin(queryData.get());
+                            } catch (InterruptedException | SQLException e) {
+                                e.printStackTrace();
                             }
 
-                        });
+                            assert future != null;
+                            future.onSuccess(result2 -> {
+                                session.put("login", new JsonObject(result2.getMap()));
+                                response.end(new JsonObject(result2.getMap()).encode());
+                            });
 
-                        futureLogin.onFailure(failed -> {
-                            logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT, "Add Login failed...: ",
-                                    failed.getMessage(), ColorUtilConstants.RESET));
-                            response.end(FAILURE);
-                        });
+                            future.onFailure(failed -> {
+                                logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT,
+                                        "Add Login failed...: ", failed.getMessage(), ColorUtilConstants.RESET));
+                                response.end(FAILURE);
+                            });
+                        }
 
-                    } catch (InterruptedException | SQLException e) {
-                        logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT,
-                                "Context Configuration failed...: ", e.getMessage(), ColorUtilConstants.RESET));
+                    });
 
-                    } catch (Exception exception) {
-                        exception.printStackTrace();
-                    }
-                } else {
-                    routingContext.response().setStatusCode(500).end("Somethings wrong - Put");
+                    futureLogin.onFailure(failed -> {
+                        logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT, "Add Login failed...: ",
+                                failed.getMessage(), ColorUtilConstants.RESET));
+                        response.end(FAILURE);
+                    });
+
+                } catch (InterruptedException | SQLException e) {
+                    logger.error(String.join("", ColorUtilConstants.RED_BOLD_BRIGHT,
+                            "Context Configuration failed...: ", e.getMessage(), ColorUtilConstants.RESET));
+
+                } catch (Exception exception) {
+                    exception.printStackTrace();
                 }
-            });
-        });
+            } else {
+                routingContext.response().setStatusCode(500).end("Somethings wrong - Put");
+            }
+        }));
     }
 
     public void setLogoutRoute() {
@@ -282,7 +272,7 @@ public class SpaRoutes {
                 try {
 
                     Future<SpaLogin> future = spaApplication
-                            .unregisterLogin(URLDecoder.decode(queryData.get(), "UTF-8"));
+                            .unregisterLogin(URLDecoder.decode(queryData.get(), StandardCharsets.UTF_8));
 
                     future.onSuccess(result -> {
                         session.destroy();
